# taskcli

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: person.hpp  person_manager.hpp  print_options.hpp  task.hpp  task_manager.hpp
src/: person.cpp  person_manager.cpp  task.cpp  task_manager.cpp
tests/unit/: person_manager_unit_test.cpp  person_unit_test.cpp  task_manager_unit_test.cpp  task_unit_test.cpp
